src/app/home-page/home-page.component.scss
.wrapper {
  overflow: hidden;
}

.main-container {
  position: relative;
  top: 15vh;
  left: 0;
  min-width: 320px;
  max-height: 500px;
  height: 90vh;
  overflow: hidden;
}

.baner-circle {
  position: absolute;
  top: -73%;
  left: -81%;
  width: 225%;
  height: 120%;
  border-radius: 50%;
  background-color: rgba(35, 23, 45, 255);
  z-index: -1;
}

.baner-img {
  position: absolute;
  top: 20%;
  right: 0;
}

.main-baner {
  width: 60%;
  margin-left: 5%;
  font-weight: normal;
  font-size: 2em;
}

.main-mission {
  width: 50%;
  margin-left: 5%;
}

.stripes1 {
  position: absolute;
  width: 25%;
  margin: 10% 5%;
  top: 0;
  right: 0;
}

.stripes2 {
  position: absolute;
  width: 25%;
  margin: 5% 5% 10% 5%;
  bottom: 0;
  left: 0;
}

@media screen and (min-device-width: 481px) and (max-device-width: 600px) and (orientation: portrait) {
  .main-container {
    position: relative;
    top: 15vh;
    left: 0;
    min-width: 320px;
    max-height: 500px;
    height: 90vh;
    overflow: hidden;
  }

  .baner-circle {
    position: absolute;
    top: -105%;
    left: -147%;
    width: 340%;
    height: 159%;
    border-radius: 50%;
    background-color: rgba(35, 23, 45, 255);
    z-index: -1;
  }

  .baner-img {
    position: absolute;
    top: 20%;
    right: 0;
  }

  .main-baner {
    width: 60%;
    margin-left: 5%;
    font-weight: normal;
    font-size: 2em;
  }

  .main-mission {
    width: 40%;
    margin-left: 5%;
  }

  .stripes1 {
    position: absolute;
    width: 25%;
    margin: 10% 5%;
    top: 0;
    right: 0;
  }

  .stripes2 {
    position: absolute;
    width: 25%;
    margin: 5% 5% 10% 5%;
    bottom: 0;
    left: 0;
  }
}

@media screen and (min-device-width: 481px) and (max-device-width: 600px) and (orientation: portrait) {
  .main-container {
    position: relative;
    top: 15vh;
    left: 0;
    min-width: 320px;
    max-height: 500px;
    height: 90vh;
    overflow: hidden;
  }

  .baner-circle {
    position: absolute;
    top: -105%;
    left: -147%;
    width: 340%;
    height: 159%;
    border-radius: 50%;
    background-color: rgba(35, 23, 45, 255);
    z-index: -1;
  }

  .baner-img {
    position: absolute;
    top: 20%;
    right: 0;
  }

  .main-baner {
    width: 60%;
    margin-left: 5%;
    font-weight: normal;
    font-size: 2em;
  }

  .main-mission {
    width: 40%;
    margin-left: 5%;
  }

  .stripes1 {
    position: absolute;
    width: 25%;
    margin: 10% 5%;
    top: 0;
    right: 0;
  }

  .stripes2 {
    position: absolute;
    width: 25%;
    margin: 5% 5% 10% 5%;
    bottom: 0;
    left: 0;
  }
}

#ourway-title-wrapper {
  scroll-behavior: smooth !important;
}

.how {
  // margin: 20px 0 0 0;
  // justify-content: center;
  display: flex;
  justify-content: center;
  align-items: center;
}

.how-button {
  width: 70%;
  line-height: 40px;
  text-transform: uppercase;
  font-size: 1rem;
  background-color: #433f51;
  color: white;
  border: 1px solid white;
  border-radius: 20px;
  margin-top: 5vh;
}

.top-button {
  margin-top: 15vh;
}

.how-button img {
  height: 1rem;
  margin: 0 5px;
  transform: translateY(15%);
}

.launchpad-logo {
  position: relative;
}

.launchpad-circle {
  position: absolute;
  top: 18%;
  left: 26%;
  width: 65vw;
  height: 65vw;
  border-radius: 50%;
  background-color: rgba(35, 23, 45, 255);
  z-index: -1;
}

.launchpad-txt-container {
  margin: 0 auto;
  width: 90%;
  display: flex;
  flex-direction: column;
}

@media screen and (min-width: 1024px) {
  div.explanation-blocks {
    display: flex;
    flex-direction: row;
    justify-content: center;
  }
}

.launchpad-title {
  font-size: 30px;
  font-weight: bold;
  margin-bottom: 35px;
}

.launchpad-content p {
  margin: 20px 0;
}

.launchpad-button {
  background-color: #ac00ff;
  border-color: #ac00ff;
  font-size: 12px;
}

.sourcing-logo {
  position: relative;
}

.sourcing-circle {
  position: absolute;
  top: 18%;
  left: 26%;
  width: 65vw;
  height: 65vw;
  border-radius: 50%;
  background-color: rgba(35, 23, 45, 255);
  z-index: -1;
}

.sourcing-txt-container {
  margin: 0 auto;
  width: 90%;
}

.sourcing-title {
  font-size: 30px;
  font-weight: bold;
  margin-bottom: 35px;
}

.sourcing-content p {
  margin: 20px 0;
}

.sourcing-button {
  background-color: #ac00ff;
  border-color: #ac00ff;
  font-size: 12px;
}

.sourcing-img {
  padding: 25% 10%;
}

.assistance-logo {
  position: relative;
}

.assistance-circle {
  position: absolute;
  top: 18%;
  left: 26%;
  width: 65vw;
  height: 65vw;
  border-radius: 50%;
  background-color: rgba(35, 23, 45, 255);
  z-index: -1;
}

.assistance-txt-container {
  margin: 0 auto;
  width: 90%;
}

.assistance-title {
  font-size: 30px;
  font-weight: bold;
  margin-bottom: 35px;
}

.assistance-content p {
  margin: 20px 0;
}

.assistance-button {
  background-color: #ac00ff;
  border-color: #ac00ff;
  font-size: 12px;
}

.assistance-img {
  padding: 25% 10%;
}

.ourway-container {
  position: relative;
  margin-top: 100px;
}

.ourway-circle {
  position: absolute;
  top: -10%;
  left: -50%;
  transform: translateX(-9%);
  width: 250vw;
  height: 250vw;
  border-radius: 50%;
  background-color: #23172d;
  z-index: -2;
}

.ourway-title-wrapper {
  display: inline-flex;
}

.ourway-title-wrapper img {
  margin: 5%;
}

.ourway-title {
  font-size: 24px;
  margin: 5%;
}

.ourway-slogan {
  font-size: 20px;
}

.flag {
  display: inline-flex;
}

.flag-border {
  position: relative;
  width: 50px;
  height: 50px;
  border: 1px solid #ac00ff;
  border-radius: 50%;
  margin: 10px;
  background-color: #23172d;
}

.flag-content p {
  width: 70vw;
}

.flag img {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.stick {
  position: absolute;
  top: 0;
  left: 50%;
  transform: translatex(-50%);
  width: 1px;
  height: 150px;
  z-index: -1;
  background-color: #ac00ff;
}

.perspective-content {
  margin: 0 15px;
}

.header {
  position: relative;
}

.perspectives-circle {
  position: absolute;
  top: -35%;
  left: -50%;
  width: 200vw;
  height: 200vw;
  border-radius: 50%;
  background-color: #23172d;
  z-index: -2;
}

.overview {
  margin-top: 200px;
  margin-bottom: 100px;
}
.logo-overview img {
  width: 90%;
  padding: 5%;
  margin-bottom: 30px;
}

.overview-content {
  margin: 0 15px;
}

.overview-title {
  font-size: 24px;
  margin: 0;
}

.overview-slogan {
  font-size: 18px;
  margin-bottom: 35px;
}

.spec {
  margin-top: 60px;
}

.launchpad-logo {
  position: relative;
}

.launchpad-img {
  padding: 15% 10%;
  width: 70vw;
}

@media screen and (min-device-width: 481px) and (max-device-width: 819px) {
  .main-container {
    min-width: 481px;
  }

  .launchpad-img {
    padding: 15% 10%;
    width: 50vw;
    height: 50vw;
  }

  .sourcing-img {
    padding: 15% 10%;
    width: 50vw;
    height: 50vw;
  }

  .assistance-img {
    padding: 15% 10%;
    width: 50vw;
    height: 50vw;
  }

  .overview {
    margin-top: 50px;
  }

  .overview-title-wrapper {
    margin-top: 100px;
  }
  perspectives-circle {
    top: 0;
  }
}

@media screen and (min-device-width: 820px) and (max-device-width: 1023px) {
  .stripes1,
  .stripes2 {
    width: 10%;
  }

  .sourcing-img {
    padding: 15% 10%;
    width: 50vw;
    height: 50vw;
  }

  .assistance-img {
    padding: 15% 10%;
    width: 50vw;
    height: 50vw;
  }

  div.how {
    margin-top: 100px;
  }
}
@media screen and (min-width: 1024px) {
  img.explained-image {
    width: 30vw;
    max-width: none;
  }
}

